styles/main.scss
@import "./reset.css";
@import "./variables.css";
@import "./navbar.scss";
@import "./code.scss";
@import "./blogpost.scss";

@font-face {
	font-family: "Inter";
	src: local("Inter"), url("./Inter-Medium.woff2") format("woff2");
	font-weight: 500;
	font-style: normal;
	font-display: swap;
}

a:hover,
button:hover {
	cursor: pointer;
}

html,
body {
	width: 100%;
	height: 100%;
	overflow-x: hidden;
	overflow-y: auto;
}

html {
	font-size: 62.5%;
	line-height: 1.5;
}

body {
	font-size: 10px;
	background-color: var(--bg);
	transition: var(--transition-bg);
	font-weight: 500;
	font-family: "Inter", Helvetica, sans-serif;
}

* {
	transition: inherit;
	font-family: inherit;
}

section {
	padding: 1rem;
	display: flex;
	flex-direction: column;
}

p {
	font-size: 1.8rem;
}

h1 {
	font-size: 3.6rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-weight: 600;
}

/* #root div */
#__next {
	box-sizing: border-box;
	min-width: 0px;
	max-width: 70rem;
	padding-bottom: 2rem;
	padding-left: 0px;
	padding-right: 0px;
	flex-direction: column;
	display: flex;
	margin: 0px auto;
	color: var(--text-color);
	font-size: 2rem;
}

svg {
	width: 24px;
	height: 24px;
	fill: var(--text-color);
	stroke: transparent;

	&.sun,
	&.moon {
		fill: var(--darkmode-toggle-color);
	}
}

.project {
	border-radius: 3px;
	margin: 2rem 0;
	background: var(--base-bg);
	box-shadow: var(--card-shadow);
	padding: 1rem;
	display: flex;
	justify-content: flex-start;

	.img-wrapper {
		width: 300px;
		flex-shrink: 0;
		overflow: hidden;
		height: 150px;
		position: relative;

		img {
			display: block;
			position: absolute;
			top: 50%;
			left: 50%;
			transform: translate(-50%, -50%);
		}
	}

	.project-body {
		margin-left: 1rem;
		flex-grow: 1;
		position: relative;
		// overflow-x: hidden;

		p {
			margin-top: 1rem;
			word-break: break-all;
			text-overflow: ellipsis;
			word-wrap: break-word;
		}
	}

	h4 {
		padding: 5px 0;
	}

	.links {
		display: flex;
		align-items: center;
		position: absolute;
		top: 0;
		right: 0;

		div {
			display: flex;
		}
		a {
			margin-left: 1rem;
			display: inline-block;
			padding: 0.8rem 1rem;
			border-radius: 3px;

			&:hover {
				background-color: var(--opacity-bg);
			}
		}

		.link {
			font-size: 1.4rem;
			border-radius: 3px;
			font-weight: 600;
			line-height: 1.4rem;
			letter-spacing: 1px;
			margin-left: 1rem;
			display: inline-block;
			padding: 0.8rem 1rem;
			border-radius: 3px;

			&.live {
				background-color: var(--blog-title-highlight);
				&:hover {
					background-color: var(--blog-title-highlight);
				}
			}

			&.disabled {
				color: var(--disabled);
				background: var(--opacity-bg);
				&:hover {
					cursor: default;
				}
			}
		}
	}
}

.blog-post-list-preview {
	list-style-type: none;

	li {
		display: flex;
		flex-direction: column;
		margin-bottom: 4rem;
		padding: 1rem;
	}

	.head {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		align-items: center;

		a {
			border-radius: 3px;
			transition: background-color 0.2s ease;

			&:hover {
				background-color: var(--blog-title-highlight);
			}
		}

		h3 {
			word-wrap: break-word;
			padding: 0.6rem 1rem;
		}
	}

	.body {
		padding: 0 1rem 0.6rem 1rem;

		p {
			margin-top: 1.2rem;
			font-size: 1.8rem;
		}
	}
}

.date {
	padding: 0.6rem 1rem;
	background: var(--opacity-bg);
	border-radius: 3px;
	font-size: 1.4rem;
	flex-shrink: 0;
}

.tag {
	font-size: 1.2rem;
	font-weight: 600;
	padding: 0.6rem 1rem;
	border-radius: 3px;
	margin-right: 1rem;
	color: var(--accent-color);
	background: var(--light-bg);
	display: inline-block;
}

.section-about {
	.about-title {
		display: flex;
		align-items: center;
		justify-content: space-between;
	}

	p {
		margin-top: 2rem;
	}

	strong {
		color: var(--highlight-color);
	}
}

.work-status {
	margin-top: 4rem;
	padding: 2rem;
	color: #2e343b;
	align-self: flex-start;
	border-radius: 3px;

	strong {
		color: #2e343b;
	}

	&.searching {
		background-color: rgb(220, 247, 220);
		border-left: 0.5rem solid rgb(21, 150, 21);
	}

	&.employed {
		background-color: rgb(250, 210, 243);
		border-left: 0.5rem solid rgb(235, 28, 173);
	}

	p {
		margin: 0;
	}

	.email {
		margin-top: 1rem;
	}
}

.socials {
	a {
		padding: 0.8rem 1.2rem;
		display: inline-block;
		border-radius: 3px;

		&:hover {
			background-color: var(--opacity-bg);
		}
	}

	div {
		display: flex;
		align-items: center;
	}

	svg {
		width: 3rem;
		height: 3rem;
		fill: var(--text-color);
	}

	span {
		margin-left: 0.4rem;
	}
}

@import "./media.scss";

